<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<SwitchPreference-->
        <!--android:defaultValue="false"-->
        <!--android:key="@string/pref_payments_key"-->
        <!--android:title="@string/pref_payments_label"-->
        <!--android:summaryOn="Process donations when adding money to charities"-->
        <!--android:summaryOff="Don't process donations when adding money to charities"/>-->

    <Preference
        android:key="@string/pref_giveReset_key"
        android:title="@string/pref_giveReset_label"
        android:summary="Allocate the same percentage of donations to each charity"/>

    <Preference
        android:key="@string/pref_giveCurrent_key"
        android:title="@string/pref_giveCurrent_label"
        android:summary="Allocate the same percentage of donations to each charity"/>

    <Preference
        android:key="@string/pref_giveMagnitude_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_magnitude_label"
        android:defaultValue="0.01"/>

    <ListPreference
        android:entries="@array/list_preference_giveRounding"
        android:entryValues="@array/list_preference_giveRounding_values"
        android:key="@string/pref_giveRounding_key"
        android:negativeButtonText="Clear Selection"
        android:positiveButtonText="OK"
        android:title="@string/pref_giveRounding_label"
        android:defaultValue="0"/>

    <Preference
        android:key="@string/pref_clear_key"
        android:title="@string/pref_clear_label"
        android:summary="Clear all saved items and related data.\nClearing does not impact historical records."/>

    <Preference
        android:key="@string/pref_show_key"
        android:title="@string/pref_show_label"
        android:summary="Navigate to the main preference screen"/>

</PreferenceScreen>
