<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

<!--    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />-->

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_userEmail"
        android:inputType="text"
        android:key="@string/pref_userEmail_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_userEmail_label" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/list_preference_gender"
        android:entryValues="@array/list_preference_gender_values"
        android:key="@string/pref_userGender_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_indexGender_label" />

    <Preference
        android:key="@string/pref_userBirthdate_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_indexBirthdate_label"
        android:defaultValue="1/1/2000"/>

    <!--<ListPreference-->
        <!--android:defaultValue="-1"-->
        <!--android:entries="@array/pref_example_list_titles"-->
        <!--android:entryValues="@array/pref_example_list_values"-->
        <!--android:key="example_list"-->
        <!--android:negativeButtonText="@null"-->
        <!--android:positiveButtonText="@null"-->
        <!--android:title="@string/pref_title_add_friends_to_messages" />-->

    <Preference
        android:key="@string/pref_show_key"
        android:title="@string/pref_show_label"
        android:summary="Navigate to the main preference screen"/>

</PreferenceScreen>
