<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:entries="@array/list_preference_sortRecord"
        android:entryValues="@array/list_preference_sortRecord_values"
        android:key="@string/pref_journalSort_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_sort_label"/>

    <ListPreference
        android:entries="@array/list_preference_orderRecord"
        android:entryValues="@array/list_preference_orderRecord_values"
        android:key="@string/pref_journalOrder_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_order_label"/>

    <Preference
        android:key="@string/pref_clear_key"
        android:title="@string/pref_clear_label"
        android:summary="Clear all records and related data.\nClearing does not impact your saved collection."/>

    <Preference
        android:key="@string/pref_show_key"
        android:title="@string/pref_show_label"
        android:summary="Navigate to the main preference screen"/>

</PreferenceScreen>
