<?xml version="1.0" encoding="utf-8"?>

<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:fragment="com.github.rjbx.givetrack.ui.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/menu_user"
        android:title="@string/pref_header_user" />

    <header
        android:fragment="com.github.rjbx.givetrack.ui.SettingsActivity$SearchPreferenceFragment"
        android:icon="@drawable/menu_filter"
        android:title="@string/pref_header_search" />

    <header
        android:fragment="com.github.rjbx.givetrack.ui.SettingsActivity$RecordPreferenceFragment"
        android:icon="@drawable/tune_vertical_black"
        android:title="@string/pref_header_record" />

    <header
        android:fragment="com.github.rjbx.givetrack.ui.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/menu_info"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.github.rjbx.givetrack.ui.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/menu_manage"
        android:title="@string/pref_header_advanced" />

</preference-headers>