<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom|center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/nav_header_vertical_spacing"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:glanceTheme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/drawer_image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".65"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="16dp"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textSize="@dimen/text_size_paragraph"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/drawer_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".15"
        android:text="@string/nav_header_subtitle" />

</LinearLayout>
